--- a/src/common/stylus/variable.styl
+++ b/src/common/stylus/variable.styl
@@ -1,15 +1,15 @@
 // 颜色定义规范
-$color-background = #222
+$color-background = #C7EDCC
 $color-background-d = rgba(0, 0, 0, 0.3)
 $color-highlight-background = #333
 $color-dialog-background = #666
 $color-theme = #ffcd32
 $color-theme-d = rgba(255, 205, 49, 0.5)
 $color-sub-theme = #d93f30
-$color-text = #fff
-$color-text-d = rgba(255, 255, 255, 0.3)
-$color-text-l = rgba(255, 255, 255, 0.5)
-$color-text-ll = rgba(255, 255, 255, 0.8)
+$color-text = #000
+$color-text-d = rgba(0, 0, 0, 0.3)
+$color-text-l = rgba(0, 0, 0, 0.5)
+$color-text-ll = rgba(0, 0, 0, 0.8)
 
 //字体定义规范
 $font-size-small-s = 10px
