--- a/src/common/stylus/variable.styl
+++ b/src/common/stylus/variable.styl
@@ -1,7 +1,7 @@
 // 颜色定义规范
-$color-background = #C7EDCC
-$color-background-d = rgba(0, 0, 0, 0.3)
-$color-highlight-background = #333
+$color-background = #c7edcc
+$color-background-d = rgba(155, 233, 166, 0.3)
+$color-highlight-background = #9beda6
 $color-dialog-background = #666
 $color-theme = #ffcd32
 $color-theme-d = rgba(255, 205, 49, 0.5)
