--- a/src/common/stylus/variable.styl
+++ b/src/common/stylus/variable.styl
@@ -2,6 +2,7 @@
 $color-background = #c7edcc
 $color-background-d = rgba(155, 233, 166, 0.3)
 $color-highlight-background = #9beda6
+$color-miniPlay-background = #15af29
 $color-dialog-background = #666
 $color-theme = #ffcd32
 $color-theme-d = rgba(255, 205, 49, 0.3)
